--- a/hexo/themes/landscape/layout/_partial/head.ejs
+++ b/hexo/themes/landscape/layout/_partial/head.ejs
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
+<% if (config.mourning){ %>
+<html  style="filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);-webkit-filter: grayscale(100%);" >
+<% } else { %>
 <html>
+<% } %>
+<!-- -->
 <head>
   <meta charset="utf-8">
   <%
